--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <ul id="links">
           <li><a href="#background">Дома</a></li>
           <li><a href="#stodanapravam">Што да направам?</a>
-          <li><a href="#">Контакт</a></li>
+          <li><a href="#korisnisoveti">Корисни Совети</a></li>
+          <li><a href="#videa">Видеа</a></li>
         </ul>
       </nav>
 
@@ -54,6 +55,35 @@
       </div>
     </div>
 
+<!--Korisni soveti za slabeenje-->
+    <article id="korisnisoveti">
+ <h2>10 корисни совети за слабеење наместо диета</h2>
+
+ <ul style="list-style-type:circle">
+ <li>Барем 5 до 10 минути пред да јадете, испијте чаша вода или некој друг здрав пијалак.</li>
+ <li>Јадете исклучиво црн леб.</li>
+ <li>Заменете ги сите газирани сокови и слатки сокови со вода.</li>
+  <li>Појадокот е најважниот оброк во денот!</li>
+  <li>Не јадете премногу висококалорична храна</li>
+  <li>Грицкајте живи бадеми или семки од тиква кои се полни со протеини и неопходни масти.</li>
+  <li>Обидете се да избегнувате млеко</li>
+  <li>Почесто гответе дома.</li>
+<li>Избегнувајте пржена храна.</li>
+<li>Вежбањето треба да е дел од вашето секојдневие. Пешачете, трчајте, планинарете – секоја активност се брои! </li>
+</ul>
+
+          </article>
+
+<!--Videa-->
+    <article id="videa">
+    <h2>Неколку видеа за помош при слабеење</h2>
+
+    <iframe width="440" height="315" src="https://www.youtube.com/embed/r8cexmYOknI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    <iframe width="440" height="315" src="https://www.youtube.com/embed/wL0CJXDriOI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    <iframe width="440" height="315" src="https://www.youtube.com/embed/IXae7qYFV24" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+            </article>
+
     <!--Sliki -->
     <div id="pics">
       <div id="dietfood">
@@ -66,5 +96,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <footer>
+  Copyright &copy; 2017 Aleksandar Divitarov
+</footer>
   </body>
 </html>
