--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!--Navigacija Bar-->
       <nav class="custom-navigation">
         <img  class="logo">
-        <ul class="wow rubbleBand"  data-wow-duration="2s"  id="links">
+        <ul class="wow wobble"  data-wow-duration="2s"  id="links">
           <li><a href="#background">Дома</a></li>
           <li><a href="#stodanapravam">Што да направам?</a>
           <li><a href="#korisnisoveti">Корисни Совети</a></li>
